# AdPerception

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: infer.py  train.py  train_jeanzay.slurm
src/datasets/: nuscenes_loader.py
src/models/: pipeline.py
src/models/backbone/: ptv3_wrapper.py
src/models/heads/: centerpoint.py  centerpoint_loss.py  seg_head.py
src/tracking/: simpletrack_wrapper.py
src/utils/: voxelizer.py
src/visualization/: rerun_viz.py
