[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adperception"
version = "0.1.0"
description = "Cooperative Dynamic Maps for Autonomous Vehicles -- AdPerception pipeline"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
